Changelog
=========

5.2-dev - (unreleased)
----------------------

5.1 - (2013-01-15)
------------------
* Added German translations
  [skaeser]
* Added French translations
  [toutpt]

5.0 - (2012-10-16)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.tags
* Feature: Optimize keywords widget by using AJAX calls instead of loading tags
  [avoinea refs #5 github, refs #5595 eea]
* Feature: Added custom eea.tags widget for keywords
  [avoinea refs #5 github, refs #5595 eea]
* Bug fix: Fixed HISTORY.txt markup
  [ghicaale]

4.6 - (2012-08-28)
------------------
* Feature: Added buildouts folder which will contain
  various samples of configurations
  [ghicaale #5418]

4.5 - (2012-07-13)
------------------
* Bug fix: Use jQuery.inArray instead of indexOf
  to avoid errors in IE < 9
  [ichimdav #5355]

4.4 - (2012-04-26)
------------------
* Bug fix: Fixed duplicate tags in edit form
  [voineali #4862]

4.3 - (2011-12-15)
------------------
* Bug fix: Fixed to work also when new keywords are not allowed.
  [david.batranu]

4.2 - (2011-11-29)
------------------
* Bug fix: Fixed to work also when keywords are required.
  Pre-populate also with new tags
  [voineali #4773 (EEA)]

4.1 - (2011-11-18)
------------------
* Re-release broken egg
  [ghicaale]

4.0 - (2011-11-18)
------------------
* Plone 4+ compatible version
  [avoinea]

1.0 - (2011-10-04)
------------------
* Initial release
