@@ -1,7 +1,6 @@
 <configure
   xmlns="http://namespaces.zope.org/zope"
   xmlns:browser="http://namespaces.zope.org/browser"
-  xmlns:zcml="http://namespaces.zope.org/zcml"
   i18n_domain="eea">
 
   <browser:resource
