@@ -1,0 +1,8 @@
+""" EEA TAGS interfaces
+"""
+from zope.interface import Interface
+
+
+class IEEATagsLayer(Interface):
+    """ Browser Layer Interface for eea.tags
+    """
