@@ -5,6 +5,8 @@
     <includeDependencies package="."/>
     <include file="profiles.zcml" />
 
+    <include package="plone.browserlayer" />
+
     <include package=".browser" />
     <include package=".widgets" />
     <include package=".upgrades" />
