@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
- <version>5.0</version>
+ <version>5.2</version>
  <dependencies>
   <dependency>profile-eea.jquery:01-jquery</dependency>
   <dependency>profile-eea.jquery:16-tokeninput</dependency>
